[metadata]
name = owm2json
version = 0.1.86
author = @viktak
author_email = owm2json@viktak.com
description = Python module for getting several of OpenWeatherMap API at once
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/viktak/owm2json
project_urls =
    Bug Tracker = https://github.com/viktak/owm2json/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src